--- a/src/Components/Home/HomeStyle.css
+++ b/src/Components/Home/HomeStyle.css
@@ -20,11 +20,12 @@
 /* Styles de la section de Apropos*/
 
   .apropos-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 100px auto;
-       width:96%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin: 100px auto;
+  width: 96%;
 
   }
 
@@ -114,7 +115,7 @@
   margin-bottom: 15px;
 }
 
-/* Wrapper pour aligner les boutons et les images */
+
 .gallery-wrapper {
   display: flex;
   align-items: center;
