--- a/src/Components/Galerie/Galerie.css
+++ b/src/Components/Galerie/Galerie.css
@@ -43,7 +43,7 @@
   /* Section Content */
   .galerie-section {
     padding: 50px 20px;
-    max-width: 1200px;
+    max-width: 1400px;
     margin: auto;
   }
   
@@ -66,7 +66,6 @@
   
   .galerie-item {
     overflow: hidden;
-    border-radius: 10px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
   }
   
@@ -80,3 +79,71 @@
   .galerie-item:hover img {
     transform: scale(2.05);
   }
+
+  /* Icône "+" */
+.plus-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.3);
+  color: white;
+  font-size: 20px;
+  padding: 10px 15px;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 2;
+  transition: background 0.3s ease, transform 0.2s ease;
+}
+
+
+.plus-icon:hover {
+  background: rgba(0, 0, 0, 0.8);
+}
+.plus-icon {
+  opacity: 0;
+}
+
+.galerie-item:hover .plus-icon {
+  opacity: 1;
+}
+
+/* Fenêtre modale (lightbox) */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.85);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+  padding: 20px;
+}
+
+/* Image dans la modale */
+.modal-content {
+  max-width: 90%;
+  max-height: 80%;
+  border-radius: 10px;
+  box-shadow: 0 0 20px black;
+}
+
+/* Bouton de fermeture (croix) */
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 40px;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 1000;
+  transition: color 0.3s ease;
+}
+
+.close:hover {
+  color: #f28a2e;
+}
